...
                            modifier = Modifier
                                .fillMaxWidth()
                                .padding(16.dp),
                            colors = ButtonDefaults.buttonColors(selectedColor)
                        ) {
                            Text(
                                "Add Journal Entry",
                                style = TextStyle(color = Color.Black, fontSize = 16.sp, textAlign = TextAlign.Center),
                                fontWeight = FontWeight.Bold,
                            )
                        }
                    }
                }
...
    Row(
        modifier = Modifier.fillMaxWidth(),
        horizontalArrangement = Arrangement.Center
    ) {
        RoundedEndButton(
            text = "Monthly",
            isSelected = currentDestination == "calendar",
            onClick = { navController.navigate("calendar") },
            isFirstButton = true
        )
        RoundedEndButton(
            text = "Weekly",
            isSelected = currentDestination == "weekly",
            onClick = { navController.navigate("weekly") },
            isFirstButton = false
        )
    }
}
...
