...
            //display that o lists were fetched, or display the lists
            if (isLoading) {
                CircularProgressIndicator(modifier = Modifier.align(Alignment.CenterHorizontally).testTag("progress"))
            } else if (listsState.isEmpty()) {
                Text("No lists available", modifier = Modifier.align(Alignment.CenterHorizontally))
            } else {
                LazyColumn (modifier = Modifier .size(boxWidth, 450.dp).testTag("listColumn")){
                    items(listsState) { list ->
                        ListDataItemView(
                            list = list,
                            onListClicked = { clickedList ->
                                // Handle navigation or any other action here
                                // For example, navigate to another screen
                                navController.navigate("task_list/${clickedList.list_id}")
                            },
                            onDeleteClicked = {
...
